@@ -1,13 +1,21 @@
 package uk.gov.hmcts.reform.iacaseapi.domain.handlers.presubmit;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.REVOKE_ACCESS_DL;
 
 import java.util.Collections;
 import java.util.List;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,7 +27,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.DynamicList;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.Value;
@@ -105,7 +112,7 @@ class RevokeCitizenPreparerTest {
         DynamicList actualDl = captor.getValue();
         assertNull(actualDl.getValue());
         assertEquals(2, actualDl.getListItems().size());
-        Value value1 = actualDl.getListItems().get(0);
+        Value value1 = actualDl.getListItems().getFirst();
         Value value2 = actualDl.getListItems().get(1);
         assertEquals(userId1, value1.getCode());
         assertEquals(userName1, value1.getLabel());
@@ -151,7 +158,7 @@ class RevokeCitizenPreparerTest {
         DynamicList actualDl = captor.getValue();
         assertNull(actualDl.getValue());
         assertEquals(1, actualDl.getListItems().size());
-        Value value = actualDl.getListItems().get(0);
+        Value value = actualDl.getListItems().getFirst();
         assertEquals(userId2, value.getCode());
         assertEquals(userName2, value.getLabel());
     }
